chore: handle handler for openAPI at OnAnalyzed() (tentative)
