# _examples/13openapi/docs/openapi.json
@@ -88,7 +88,7 @@
         "parameters": [
           {
             "in": "path",
-            "name": "articleID",
+            "name": "articleId",
             "required": true,
             "schema": {
               "type": "integer"
@@ -118,7 +118,7 @@
         "parameters": [
           {
             "in": "path",
-            "name": "articleID",
+            "name": "articleId",
             "required": true,
             "schema": {
               "type": "integer"
